video of trailpanion

--- a/index.html
+++ b/index.html
@@ -44,11 +44,16 @@
       <div class="row firstProjectSection">
         <div class="col-md-6">
           <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ PostgreSQL ▫ Node.js ▫ Firebase</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
-          <a href="https://github.com/louieknolle/WorkingCapstoneTitle/tree/main/trailpanion" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
+          <a href="https://github.com/louieknolle/WorkingCapstoneTitle" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
           </a>
         </div>
         <div class="col-md-6 earlySiteBox">
-          <img src="img/trailpanion.gif" alt="first version of portfolio page with 4 photos of person in one ring in center" class="firstEdPhoto">
+          <video class="trail-vid" classcontrols autoplay>
+            <source src="img/Trailpanion.mp4"
+                    type="video/mp4" />
+            <source src="img/TrailpanionOGG.ogg" type="video/ogg" />
+
+        </video>
         </div>
         <div class="row">
           <div class="col-md-6">
