embed youtube vid of trailpanion

--- a/index.html
+++ b/index.html
@@ -40,20 +40,18 @@
       </div>
     </div>
     <div id="projects" class="">
-      <h3 class="text-center" id="projectTitle">Projects</h3>
+      <h2 class="text-center" id="projectTitle">Projects</h2>
       <div class="row firstProjectSection">
         <div class="col-md-6">
           <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ PostgreSQL ▫ Node.js ▫ Firebase</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
           <a href="https://github.com/louieknolle/WorkingCapstoneTitle" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
           </a>
         </div>
-        <div class="col-md-6 earlySiteBox">
-          <video class="trail-vid" classcontrols autoplay>
-            <source src="img/Trailpanion.mp4"
-                    type="video/mp4" />
-            <source src="img/TrailpanionOGG.ogg" type="video/ogg" />
-
-        </video>
+        <div class="col-md-6 embed-responsive embed-responsive-16by9" id="iframeContainer">
+          <iframe width="90%" 
+          height="400px" class="embed-responsive-item" id="responsiveIframe" 
+            src="https://www.youtube.com/embed/EqQKB6dYgDM">
+          </iframe>
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -61,7 +59,7 @@
             <a href="https://www.andyknolle.com/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
           </div>
           <div class="col-md-6">
-            <img src="img/andyportfolio.png" class="quotesGif" alt="screenshot of artist portfolio site">
+            <img src="img/andyportfolio.png" class="projectMedia" alt="screenshot of artist portfolio site">
           </div>
       </div>
         <div class="row">
@@ -70,7 +68,7 @@
             <a href="https://quotes-trivia.netlify.app/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
           </div>
           <div class="col-md-6">
-            <img src="img/QuotesGame.gif" class="quotesGif" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+            <img src="img/QuotesGame.gif" class="projectMedia" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
           </div>
       </div>
       <div class="row">
@@ -79,7 +77,7 @@
           <a href="https://github.com/louieknolle/Trails.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
         </div>
         <div class="col-md-6">
-          <img src="img/trailsToRoam.png" class="quotesGif" alt="screenshot of trails to roam home page">
+          <img src="img/trailsToRoam.png" class="projectMedia" alt="screenshot of trails to roam home page">
         </div>
     </div>
     </div>
