update trailpanion tech

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <div class="col-md-8 aboutBody">
         <p class="aboutText">I am an easy-going and driven software developer seeking a full-stack or front-end position after completing my coding boot camp, an internship, and acquiring freelance work experience. With previous professional experience as a backpacking guide, fruit picker, maple sugarer, tree farmer, and conservation land steward, I am a dedicated and proven learner of new skills and trades and am always eager to learn more.  </p>
         <p>I highly value tech's ability to make goods and services more accessible and the world a more just place. And am especially passionate about the intersection of sustainability, fighting climate change, and technology.</p>
-        <p class="skills">Currently experienced with: <br>React ▫ Javascript ▫ jQuery ▫ C# ▫ Typescript ▫ Node.js ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ MySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
+        <p class="skills">Currently experienced with: <br>React ▫ Javascript ▫ jQuery ▫ Typescript ▫ Node.js ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ MySQL ▫ MongoDB ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
       </div>
     </div>
     <div id="projects" class="">
       <h2 class="text-center" id="projectTitle">Projects</h2>
       <div class="row firstProjectSection">
         <div class="col-md-6">
-          <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ PostgreSQL ▫ Node.js ▫ Firebase</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
+          <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ MongoDB ▫ Node.js ▫ Express.js</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
           <a href="https://github.com/louieknolle/WorkingCapstoneTitle" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
           </a>
         </div>
