better quality quotes gif and edit about section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <img class="bioPic" src="img/headshot.JPG" alt=" headshot of a bearded person smiling with mountains in the background over right shoulder">
       </div>
       <div class="col-md-8 aboutBody">
-        <p class="aboutText">I am an easy-going and driven software developer seeking a full-stack or front-end position after completing my coding boot camp, an internship, and acquiring freelance work experience. With previous professional experience as a backpacking guide, fruit picker, maple sugarer, tree farmer, and conservation land steward, I am a dedicated and proven learner of new skills and trades and am always eager to learn more.  </p>
-        <p>I highly value tech's ability to make goods and services more accessible and the world a more just place. And am especially passionate about the intersection of sustainability, fighting climate change, and technology.</p>
-        <p class="skills">Currently experienced with: <br>React ▫ Javascript ▫ jQuery ▫ Typescript ▫ Node.js ▫ C# ▫ .NET ▫ ASP.NET Core MVC ▫ RESTful API building ▫ MySQL ▫ MongoDB ▫ Entity Framework Core ▫ MSTest ▫ Jest</p>
+        <p class="aboutText">Hi there! I'm an easy-going and driven software developer looking for a full-stack or front-end position. I've completed a coding boot camp and had an internship, as well as some freelance work experience. Before I got into tech, I had a variety of different jobs, including backpacking guide, fruit picker, maple sugarer, tree farmer, and conservation land steward. All those experiences have taught me how to learn new skills quickly and effectively.  </p>
+        <p>I'm really excited about the potential for technology to make things more accessible and create a more just world. I'm particularly passionate about the intersection of sustainability, climate change, and tech.</p>
+        <div class="skills"><p>Currently experienced with:</p> <p>React ▫ Javascript ▫ jQuery ▫ Typescript </p><p>Node.js ▫ C# ▫ .NET ▫ ASP.NET Core MVC</p>  <p>RESTful APIs ▫  ▫ MongoDB ▫ Express.js ▫ MySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p></div>
       </div>
     </div>
     <div id="projects" class="">
@@ -44,7 +44,7 @@
       <div class="row firstProjectSection">
         <div class="col-md-6">
           <p class="projTitle">Trailpanion Hiking App</p><p>React.js ▫ TailwindCSS ▫ Trail API and Mapbox GL JS ▫ MongoDB ▫ Node.js ▫ Express.js</p><p>Allows users to create an inventory of hiking/outdoors gear, create packing lists, and browse and save potential destinations.</p>
-          <a href="https://github.com/louieknolle/WorkingCapstoneTitle" target="_blank" ><button class="proj-list fab fa-github">View repo</button>
+          <a href="https://github.com/louieknolle/WorkingCapstoneTitle" target="_blank" ><button class="proj-list fab fa-github"> View repo</button>
           </a>
         </div>
         <div class="col-md-6 embed-responsive embed-responsive-16by9" id="iframeContainer">
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col-md-6">
             <p class="projTitle">Artist Portfolio Site</p><p>React.js ▫ React Router ▫ Third-party Contact Form</p><p>Client portfolio website to showcase their art.  Page navigation with React Router and custom side scrolling functionality.</p>
-            <a href="https://www.andyknolle.com/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
+            <a href="https://www.andyknolle.com/" target="_blank" ><button class="proj-list fab fa-github"> View site</button></a>
           </div>
           <div class="col-md-6">
             <img src="img/andyportfolio.png" class="projectMedia" alt="screenshot of artist portfolio site">
@@ -65,16 +65,16 @@
         <div class="row">
           <div class="col-md-6">
             <p class="projTitle">Famous Quotes API Trivia</p><p>HTML ▫ CSS ▫ jQuery ▫ JS ▫ APIs ▫ Webpack</p><p>This was my first team project after learning Javascript. A quotes trivia game utilizing multiple APIs and object-oriented programming.</p>
-            <a href="https://quotes-trivia.netlify.app/" target="_blank" ><button class="proj-list fab fa-github">View site</button></a>
+            <a href="https://quotes-trivia.netlify.app/" target="_blank" ><button class="proj-list fab fa-github"> Play game!</button></a>
           </div>
           <div class="col-md-6">
-            <img src="img/QuotesGame.gif" class="projectMedia" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
+            <img src="img/quotesGameimproved.gif" class="projectMedia" alt="video of quiz question being answered and score screen displaying with confetti coming down from top of screen">
           </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <p class="projTitle">All Trails Lead to Roam</p><p>C# ▫ ASP.Core MVC ▫ Razor ▫ Esri ArcGIS API ▫ Entity Framework ▫ MySQL</p><p>Bootcamp team week project where users could search for trails from a custom ASP.NET Core Web API. Users could also click on map and geocoding allowed them so save that point.</p>
-          <a href="https://github.com/louieknolle/Trails.Solution" target="_blank" ><button class="proj-list fab fa-github">View repo</button></a>
+          <a href="https://github.com/louieknolle/Trails.Solution" target="_blank" ><button class="proj-list fab fa-github"> View repo</button></a>
         </div>
         <div class="col-md-6">
           <img src="img/trailsToRoam.png" class="projectMedia" alt="screenshot of trails to roam home page">
