--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="col-md-8 aboutBody">
         <p class="aboutText">Hi there! I'm an easy-going and driven software developer looking for a full-stack or front-end position. I've completed a coding boot camp and had an internship, as well as some freelance work experience. Before I got into tech, I had a variety of different jobs, including backpacking guide, fruit picker, maple sugarer, tree farmer, and conservation land steward. All those experiences have taught me how to learn new skills quickly and effectively.  </p>
         <p>I'm really excited about the potential for technology to make things more accessible and create a more just world. I'm particularly passionate about the intersection of sustainability, climate change, and tech.</p>
-        <div class="skills"><p>Currently experienced with:</p> <p>React ▫ Javascript ▫ jQuery ▫ Typescript </p><p>Node.js ▫ C# ▫ .NET ▫ ASP.NET Core MVC</p>  <p>RESTful APIs ▫  ▫ MongoDB ▫ Express.js ▫ MySQL ▫ Entity Framework Core ▫ MSTest ▫ Jest</p></div>
+        <div class="skills"><p>Currently experienced with:</p> <p>React ▫ Javascript ▫ jQuery ▫ Typescript </p><p>Node.js ▫ C# ▫ .NET ▫ ASP.NET Core MVC</p><p>MongoDB ▫ Express.js ▫ MySQL ▫ Entity Framework Core</p><p>RESTful APIs ▫ MSTest ▫ Jest</p></div>
       </div>
     </div>
     <div id="projects" class="">
